# bootcamp_macaw_04_26

./: .gitignore  README.md  TODO.md  decision_tress.ipynb  decorators.ipynb  gradient_descent.ipynb  heart.csv:Zone.Identifier  learning_sql.ipynb  logistic_regression.ipynb  mle.md  neural_network.ipynb  oops.ipynb  quiz.ipynb  quiz_hinadome.ipynb  random_forest.ipynb  requirements.txt
Engineering/: ci-cd-ct.md  containerization.md
anvitha_assignments/: EDA.ipynb  Heartdisease.ipynb  MNIST.ipynb  learning_sql.ipynb  logistic_regression_scratch.ipynb  predictgrades.ipynb
assignments/: EyramTest  assignment2.ipynb  assignment_3.md  assignment_5.md  learningsqlassignment.ipynb
eyram-assignments/: Anvitha_practice_notebook.ipynb  boosted_trees.ipynb  logistic_regression.ipynb  notebook.ipynb
hinadome-assignments/: assignmen_1_linear_regression.ipynb  assignment_2_logistic_regression.ipynb  assignment_4_sql.ipynb  quiz.ipynb
merkis/: neural_network.ipynb
merkis/decisiontree_python/: DecisionTree.py  main.py
merkis/used_car_project/: EDA.ipynb  main.py  test_api.py
testing/: pytest_1.py  sample_func.py  testing.ipynb
used_car_project/: Dockerfile  EDA.ipynb  README.md  main.py  pyproject.toml  test_api.py
